Remove Eclipse Java formatter
Co-authored-by: Codex GPT-5.6 <codex@openai.com>